Auntenticacion de usuario hecha

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agarimo">
         <activity
+            android:name=".ActivitySingIn"
+            android:exported="true" />
+        <activity
             android:name=".ActivitySeleccion"
             android:exported="true" />
         <activity
